--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                         <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                     </button>
-                    <a class="navbar-brand" href="{{ site.baseurl }}#page-top">AccelerateIBD</a>
+                    <a class="navbar-brand" href="{{ site.baseurl }}#page-top">Patricio Forno</a>
                 </div>
     
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -77,38 +77,23 @@
                     </div>
                     <div class="row">
                         <div class="footer-col col-md-4">
-                            <!--<h3>Tony Patterson</h3>
-                            <p><a href="mailto:tony@AccelerateIBD.com">Tony@AccelerateIBD.com</a></p>
-                            <p>cell: (413) 429-6063</p>>-->
-                        </div>
-                        <div class="footer-col col-md-4">
                             <h3></h3>
                             <ul class="list-inline">
                                 <li>
-                                    <a href="https://www.facebook.com/Accelerateibd-1236690379695682/" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-facebook"></i></a>
-                                </li>
-                                <!-- <li>
-                                    <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
-                                </li>-->
-                                <li>
-                                <!--    <a href="https://www.twitter.com/Accelerate40B" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
-                                </li>-->
-                                <li>
-                                    <a href="https://www.linkedin.com/company/accelerateibd" class="btn-social btn-outline" target="blank"><i class="fa fa-fw fa-linkedin"></i></a>
+                                    <a href="https://www.linkedin.com/in/patricioforno" class="btn-social btn-outline" target="blank"><i class="fa fa-fw fa-linkedin"></i></a>
                                 </li>
                                 <li>
                                 <!--    <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
                                 </li>-->
                             </ul> 
-                            <h3>AccelerateIBD LLC</h3>
+                            <h3>Patricio Forno</h3>
                             <p>    P.O.B. 16<br>
                                 Salisbury, CT 06068, USA
                             </p>
-                            <p><a href="mailto:tonypatricio@AccelerateIBD.com">tonypatricio@AccelerateIBD.com</a></p>
                         </div>
                         <div class="footer-col col-md-4">
                             <!--<h3>Patricio Forno</h3>
-                            <p><a href="mailto:patricio@AccelerateIBD.com">Patricio@AccelerateIBD.com</a></p>
+                            <p><a href="mailto:patricio@fornomail.com">Patricio@fornomail.com</a></p>
                             <p>cell: (413) 429-6276</p>>-->
                         </div>
                     </div>
@@ -118,7 +103,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                            Copyright &copy; AccelerateIBD LLC 2016 (reg. office: 82 Wendell Ave., Suite 100, Pittsfield, Masachussetts 01201, USA)
+                            Copyright &copy; Patricio Forno 2018 (reg. XXXXX)
                         </div>
                     </div>
                 </div>
