--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,7 +73,7 @@
             <div class="footer-above">
                 <div class="container">
                     <div class="row">
-                        <p style="font-size:25px; font-weight: normal">Smarter and faster international expansion, sustainable value creation</p>
+                        <p style="font-size:25px; font-weight: normal">Placeholder</p>
                     </div>
                     <div class="row">
                         <div class="footer-col col-md-4">
