--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,13 +48,13 @@
                             <a href="{{ site.baseurl }}#page-top"></a>
                         </li>
                         <li class="page-scroll">
-                            <a href="{{ site.baseurl }}#services">what we do</a>
+                            <a href="{{ site.baseurl }}#services">Patricio's Task</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="{{ site.baseurl }}#about">who we are</a>
+                            <a href="{{ site.baseurl }}#about">Bio</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="{{ site.baseurl }}#who-you-are">Who you are</a>
+                            <a href="{{ site.baseurl }}#who-you-are">resume</a>
                         </li>
                         <li class="page-scroll">
                             <a href="{{ site.baseurl }}#contact">contact</a>
