--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
                             <a href="{{ site.baseurl }}#page-top"></a>
                         </li>
                         <li class="page-scroll">
-                            <a href="{{ site.baseurl }}#services">Patricio's Task</a>
+                            <a href="{{ site.baseurl }}#services">My Task</a>
                         </li>
                         <li class="page-scroll">
                             <a href="{{ site.baseurl }}#about">Bio</a>
