--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,10 +51,10 @@
                             <a href="{{ site.baseurl }}#services">My Task</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="{{ site.baseurl }}#about">Bio</a>
+                            <a href="{{ site.baseurl }}#about">Bio/resume</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="{{ site.baseurl }}#who-you-are">resume</a>
+                            <a href="{{ site.baseurl }}#who-you-are">delete?</a>
                         </li>
                         <li class="page-scroll">
                             <a href="{{ site.baseurl }}#contact">contact</a>
@@ -82,9 +82,6 @@
                                 <li>
                                     <a href="https://www.linkedin.com/in/patricioforno" class="btn-social btn-outline" target="blank"><i class="fa fa-fw fa-linkedin"></i></a>
                                 </li>
-                                <li>
-                                <!--    <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
-                                </li>-->
                             </ul> 
                             <h3>Patricio Forno</h3>
                             <p>    P.O.B. 16<br>
