--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,7 +73,8 @@
             <div class="footer-above">
                 <div class="container">
                     <div class="row">
-                        <p style="font-size:25px; font-weight: normal">Placeholder</p>
+                        <p style="font-size:25px; font-weight: normal">Placeholder, delete?</p>
+                        <p><a href="mailto:patricio@fornomail.com">patricio@fornomail.com</a></p>
                     </div>
                     <div class="row">
                         <div class="footer-col col-md-4">
