--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -101,7 +101,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                            Copyright &copy; Patricio Forno 2018 (reg. XXXXX)
+                            Copyright &copy; Patricio Forno 2018 (delete all?)
                         </div>
                     </div>
                 </div>
